--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ pre code {
   min-width: 100px;
   padding: 0;
 
-  background: #ffeff0;
+  background: #fad17f;
   word-wrap: break-word;
   box-decoration-break: clone;
   padding: .1rem .3rem .2rem;
