--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,9 @@ pre code {
   padding: .1rem .3rem .2rem;
   border-radius: .2rem;
 }
+
+h1 {
+  color: style="background-color:powderblue";
+  font-family: Heletica;
+}
+
