--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,10 @@ pre code {
   white-space: pre;
   max-width: 100%;
   min-width: 100px;
-  padding: 0;
+  width: 300px;
+  border: 15px gray;
+  padding: 50px;
+  margin: 20px;
 
   background: #ffffff;
   word-wrap: break-word;
@@ -20,4 +23,6 @@ h1 {
   font-family: "Helvetica";
   font-style: italic;
 }
+
+
 
