--- a/styles.css
+++ b/styles.css
@@ -22,5 +22,15 @@ h1 {
   text-align: center;
 }
 
+h1 {
+  text-align: center;
+}
 
+h2 {
+  text-align: center;
+}
+
+h3 {
+  text-align: center;
+}
 
